--- a/news.html
+++ b/news.html
@@ -1,40 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link href="style.css" rel="stylesheet" type="text/css" >
-
-</head>
-<body>
-	<div class="header">
-		<div class="logo">
-			SuperLogo
+<!DOCTYPE HTML>
+<html>
+  <script src="bootstrap-3.3.7-dist/jq/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" type="text/css" >
+<body class="container-fluid con" >
+	<div class="header row">
+		<div class="logo col-lg-4 col-md-4 col-sm-2 col-xs-9">
+			<div class="logotext">SuperLogo</div>
 		</div>
-		<ul>
-			<li><a href="index.html">Головна</a></li>
-			<li><a href="news.html">Новини</a>
-			<li><a href="#">Студентам</a>
-				<ul>
-					<li><a href="#">Програма</a></li>
-					<li><a href="#">Лабораторна</a></li>
-					<li><a href="#">Література</a></li>
+		<ul class="col-lg-8 col-md-8 col-sm-10 hidden-xs row" id="ul">
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="index.html">Головна</a></li>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="news.html">Новини</a>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Студентам</a>
+				<ul class="row">
+					<li class="col-lg-12 col-md-12 col-sm-12"><a href="#">Програма</a></li>
+					<li class="col-lg-12 col-md-12 col-sm-12" ><a href="#">Лабораторна</a></li>
+					<li class="col-lg-12 col-md-12 col-sm-12"><a href="#">Література</a></li>
 				</ul>
 			</li>  
-			<li><a href="#">Відгуки</a></li>
-			<li><a href="#">Контакти</a></li>
-			<li><a href="#">Admin</a></li>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Відгуки</a></li>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Контакти</a></li>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Admin</a></li>
 		</ul>
-
+		<div class="minimenu hidden-lg hidden-md hidden-sm col-xs-3">
+		
+			<div class="img"></div>
+			
+			<ul class="col-xs-12 row" id="ul2">
+				<li class="grow col-xs-12"><a href="index.html">Головна</a></li>
+				<li class="grow col-xs-12"><a href="news.html">Новини</a>
+				<li class="grow col-xs-12"><a href="#">Студентам</a>
+					<ul class="row">
+						<li class="col-xs-10 center"><a href="#">Програма</a></li>
+						<li class="col-xs-10 center"><a href="#">Лабораторна</a></li>
+						<li class="col-xs-10 center"><a href="#">Література</a></li>
+					</ul>
+				</li>  
+				<li class="grow col-xs-12"><a href="#">Відгуки</a></li>
+				<li class="grow col-xs-12"><a href="#">Контакти</a></li>
+				<li class="grow col-xs-12"><a href="#">Admin</a></li>
+			</ul>
+		</div>
 		<div class="clearfix"></div>
 	</div>
 	<br>
 	<br>
-		
-	<div class="gal">
-		
-	</div>
-	<div class="standart"><p class="p1">Тема</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos alias sunt sequi beatae ratione enim recusandae dicta ex iste corrupti repudiandae vel sapiente magni ducimus harum iusto odit modi necessitatibus sint nisi nemo, dolorem veniam esse eveniet nulla! Recusandae, dicta, dignissimos saepe hic accusantium at modi labore mollitia provident, temporibus natus cumque. Repudiandae, tempora! Voluptates dolorem consequuntur aspernatur mollitia quis amet consectetur, maiores a laborum saepe modi repellendus recusandae qui fuga ad ut voluptate ex iure maxime iste magni ipsa, sed reprehenderit voluptatibus tenetur! Maxime minus perferendis ipsum nesciunt. Enim molestiae rerum architecto laudantium odit debitis facilis unde quidem perspiciatis incidunt, eligendi recusandae a cum fuga minima accusamus voluptatum iusto hic, quibusdam vitae earum deserunt molestias. Delectus nemo quidem autem, ducimus libero magnam voluptatum beatae placeat aperiam quibusdam ratione aut cum voluptas quae, sint, id eius minus quos ipsum perspiciatis qui enim! Eligendi architecto veritatis cumque, libero a. Exercitationem reiciendis dolore, laudantium deserunt earum in omnis, a repudiandae id, soluta rerum cumque esse totam culpa corrupti explicabo. Molestiae ullam porro consequuntur ad voluptatibus natus praesentium quaerat, at. Perferendis ipsam, fugiat qui earum animi iure sequi delectus veniam! Enim delectus est ipsa dicta voluptate deleniti eaque, neque soluta facere, dolorum vel facilis. Quasi recusandae sed odio quibusdam sunt aperiam esse modi ex incidunt delectus, aliquam soluta at possimus provident. Laudantium eos dolore, amet molestias vel corporis quisquam iusto aliquid eum in possimus optio, deleniti sequi dolorem magnam officia ullam tenetur pariatur maiores reprehenderit veniam! Sunt qui inventore tempore hic illo quos ab veritatis, esse nam laboriosam consequatur obcaecati vitae odio accusantium dolores eaque aliquam perferendis. Odit sint neque aperiam laboriosam, autem officia, dignissimos non laborum fuga qui. Sed fugit mollitia dolorum voluptatibus at minus voluptatem et illo a quod, voluptatum, optio natus dolores totam facere ab. Mollitia, voluptatem ratione. Reiciendis consequuntur recusandae laboriosam. Quod labore similique hic beatae ullam omnis voluptates, ea iste soluta. Nobis inventore minima omnis maiores voluptates accusamus doloribus ipsa quod ex perspiciatis accusantium architecto, aliquid velit corporis nulla, dolor facere, quia at expedita. Tenetur vitae cumque temporibus voluptatem voluptatibus. Consequuntur cum, modi nisi perferendis repudiandae soluta exercitationem corporis iure delectus. Quis labore, voluptatem sed odio eligendi natus vero iste neque minus illo rerum facilis, omnis repudiandae iusto delectus ullam dolore placeat reprehenderit laborum. Aspernatur, quos provident? Vel placeat, voluptatum ex! Cum non eaque reprehenderit nobis eum ullam cupiditate. Tenetur facere quo, quae! Eum odio assumenda maiores deleniti. Sint alias ab fuga, eaque neque, corrupti perspiciatis nesciunt delectus numquam libero nisi nostrum, blanditiis doloremque ex omnis consectetur ipsum expedita eius pariatur ducimus reprehenderit vitae rerum? A qui quo quaerat maiores sit dicta, explicabo distinctio quibusdam aut quam ut esse. Beatae temporibus, saepe, pariatur excepturi velit dolor impedit perspiciatis corporis dicta veritatis at fugiat porro quae exercitationem natus dolorum quasi quibusdam totam. Recusandae voluptatum beatae nulla itaque. Ad incidunt laboriosam velit aperiam dolorem, praesentium voluptas quidem deleniti sapiente vitae deserunt cum, perspiciatis ipsa, aspernatur illum provident amet tenetur. Quaerat voluptas veritatis dolor et explicabo magni deleniti repellat suscipit minus.</p>
-	</div>
-	<footer><CENTER>телефон +380353642464</CENTER></footer>
+	<div class="gal"></div>
+	<br>
+	<br>
+	<div class="row content">
+	
+	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Новини</p>
+		<p>У результаті вивчення дисципліни «Застосування законодавства іноземних
+		держав в нотаріальній практиці» здобувач вищої освіти повинен:
+		знати:
+		- основні положення міжнародних актів, чинного законодавства України та
+		іноземного законодавства щодо вчинення нотаріальних дій;
+		- особливості прийняття нотаріусами України документів, складених за кордоном
+		та процесуальний порядок оформлення нотаріусами документів для дії за кордоном;
+		- особливості нотаріальних дій щодо забезпечення доказів, необхідних для
+		ведення справ в органах іноземних держав;
+		- особливості міжнародної співпраці у сфері нотаріату;
+		вміти:
+		- правильно застосовувати міжнародні акти, чинне законодавство України та
+		іноземне законодавство щодо вчинення нотаріальних дій;
+		-
+		складати проекти нотаріальних документів із застосуванням законодавства іноземних
+		держав та документів для дії за кордоном;
+		- вчиняти дії щодо забезпечення доказів, необхідних для ведення справ в органах
+		іноземних держав;
+		- аналізувати практичні ситуації в нотаріальній практиці.</p></div>
+		</div>
 </body>
+
+<footer><CENTER>телефон +380353642464</CENTER></footer>
 </html>
