added new pages, add admin page

--- a/curriculum.html
+++ b/curriculum.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+ 	<head>
 		<script src="bootstrap-3.3.7-dist/jq/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
@@ -52,30 +52,12 @@
 	</div>
 	<br>
 	<br>
-	<div class="block">
-		Вітаємо на нашому сайті!
-	</div>
+	<div class="gal"></div>
 	<br>
 	<br>
 	<div class="row content">
-	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12"><p class="p1">Про предмет</p>
-		<p>Мета:поглиблення студентами юридичного факультету теоретичних знань і формування у них практичних умінь та навичок застосування міжнародних актів та іноземного законодавства в нотаріальній практиці, прийняття нотаріусами документів, складених за кордоном, оформлення нотаріусами документів для дії за кордоном та ознайомлення студентів із формами міжнародної співпраці у сфері
-		нотаріату.</p>
-		<p>Предмет: міжнародні акти, іноземне законодавство, законодавство України про
-		нотаріат, цивільне процесуальне законодавство України, документи нотаріальної
-		практики.</p>
-		<p>Зміст: Нотаріат України як нотаріат класичного типу. Загальні правила
-		застосування нотаріусами України законодавства іноземних держав та міжнародних
-		договорів. Прийняття нотаріусами документів, складених за кордоном.
-		Процесуальний порядок оформлення нотаріусами документів для дії за кордоном.
-		Міжнародний союз нотаріату. Європейський кодекс нотаріального професійного
-		права.
-		Місце у навчальному процесі - вибіркова, 1семестр.</p>
-	</div>
-	<div class="clearfix"></div>
-	<br>
-	<br>
-	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Новини</p>
+	
+	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Навчальний план</p>
 		<p>У результаті вивчення дисципліни «Застосування законодавства іноземних
 		держав в нотаріальній практиці» здобувач вищої освіти повинен:
 		знати:
