--- a/admin.html
+++ b/admin.html
@@ -55,29 +55,30 @@
 	<div class="gal"></div>
 	<br>
 	<br>
-	<div class="row content">
+	<div class="row content ">
 	
-	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Новини</p>
-		<p>У результаті вивчення дисципліни «Застосування законодавства іноземних
-		держав в нотаріальній практиці» здобувач вищої освіти повинен:
-		знати:
-		- основні положення міжнародних актів, чинного законодавства України та
-		іноземного законодавства щодо вчинення нотаріальних дій;
-		- особливості прийняття нотаріусами України документів, складених за кордоном
-		та процесуальний порядок оформлення нотаріусами документів для дії за кордоном;
-		- особливості нотаріальних дій щодо забезпечення доказів, необхідних для
-		ведення справ в органах іноземних держав;
-		- особливості міжнародної співпраці у сфері нотаріату;
-		вміти:
-		- правильно застосовувати міжнародні акти, чинне законодавство України та
-		іноземне законодавство щодо вчинення нотаріальних дій;
-		-
-		складати проекти нотаріальних документів із застосуванням законодавства іноземних
-		держав та документів для дії за кордоном;
-		- вчиняти дії щодо забезпечення доказів, необхідних для ведення справ в органах
-		іноземних держав;
-		- аналізувати практичні ситуації в нотаріальній практиці.</p></div>
+		<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Адмінка</p>
+<!--		adminka-->
+		<form class="form-group form1">
+			<label><h4>Додати Картинку:</h4>
+			<input type="file" class="btn btn-default">
+			</label>
+			<br>
+			<label>
+			<h4>Додати Заголовок:</h4>
+			 <input type="text" class="form-control">
+			 </label>
+			<br>
+			<h4>Додати Короткий Опис Новини:</h4>
+			<textarea name="" id="" cols="50" rows="2"></textarea>
+			<br>
+			<h4>Додати Довгий Опис Новини:</h4>
+			<textarea name="" id="" cols="50" rows="10"></textarea>
+			<br>
+			<input type="button" class="btn btn-success" value="Відправити статтю">
+		</form>
 		</div>
+	</div>
 </body>
 
 <footer><CENTER>телефон +380353642464</CENTER></footer>
