--- a/curriculum.html
+++ b/curriculum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="app">
  	<head>
 		<script src="bootstrap-3.3.7-dist/jq/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
@@ -19,13 +19,13 @@
 			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Студентам</a>
 				<ul class="row">
 					<li class="col-lg-12 col-md-12 col-sm-12"><a href="#">Програма</a></li>
-					<li class="col-lg-12 col-md-12 col-sm-12" ><a href="#">Лабораторна</a></li>
+					<li class="col-lg-12 col-md-12 col-sm-12" ><a href="lab.html">Лабораторна</a></li>
 					<li class="col-lg-12 col-md-12 col-sm-12"><a href="#">Література</a></li>
 					<li class="col-lg-12 col-md-12 col-sm-12"><a href="curriculum.html">Начальний план</a></li>
 				</ul>
 			</li>  
 			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="reviews.html">Відгуки</a></li>
-			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Контакти</a></li>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="contacts.html">Контакти</a></li>
 			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="admin.html">Admin</a></li>
 		</ul>
 		<div class="minimenu hidden-lg hidden-md hidden-sm col-xs-3">
@@ -38,13 +38,13 @@
 				<li class="grow col-xs-12"><a href="#">Студентам</a>
 					<ul class="row">
 						<li class="col-xs-10 center"><a href="#">Програма</a></li>
-						<li class="col-xs-10 center"><a href="#">Лабораторна</a></li>
+						<li class="col-xs-10 center"><a href="lab.html">Лабораторна</a></li>
 						<li class="col-xs-10 center"><a href="#">Література</a></li>
 						<li class="col-xs-10 center"><a href="curriculum.html">Начальний план</a></li>
 					</ul>
 				</li>  
 				<li class="grow col-xs-12"><a href="reviews.html">Відгуки</a></li>
-				<li class="grow col-xs-12"><a href="#">Контакти</a></li>
+				<li class="grow col-xs-12"><a href="contacts.html">Контакти</a></li>
 				<li class="grow col-xs-12"><a href="admin.html">Admin</a></li>
 			</ul>
 		</div>
@@ -58,26 +58,39 @@
 	<div class="row content">
 	
 	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Навчальний план</p>
-		<p>У результаті вивчення дисципліни «Застосування законодавства іноземних
-		держав в нотаріальній практиці» здобувач вищої освіти повинен:
-		знати:
-		- основні положення міжнародних актів, чинного законодавства України та
-		іноземного законодавства щодо вчинення нотаріальних дій;
-		- особливості прийняття нотаріусами України документів, складених за кордоном
-		та процесуальний порядок оформлення нотаріусами документів для дії за кордоном;
-		- особливості нотаріальних дій щодо забезпечення доказів, необхідних для
-		ведення справ в органах іноземних держав;
-		- особливості міжнародної співпраці у сфері нотаріату;
-		вміти:
-		- правильно застосовувати міжнародні акти, чинне законодавство України та
-		іноземне законодавство щодо вчинення нотаріальних дій;
-		-
-		складати проекти нотаріальних документів із застосуванням законодавства іноземних
-		держав та документів для дії за кордоном;
-		- вчиняти дії щодо забезпечення доказів, необхідних для ведення справ в органах
-		іноземних держав;
-		- аналізувати практичні ситуації в нотаріальній практиці.</p></div>
-		</div>
+		<table class="table table-hover table-bordered">
+			<thead>
+				<tr>
+					<th>Head 1</th>
+					<th>Head 2</th>
+					<th>Head 3</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>John</td>
+					<td>Doe</td>
+					<td>john@example.com</td>
+				</tr>
+				<tr>
+					<td>Mary</td>
+					<td>Moe</td>
+					<td>mary@example.com</td>
+				</tr>
+				<tr>
+					<td>July</td>
+					<td>Dooley</td>
+					<td>july@example.com</td>
+				</tr>
+				<tr>
+					<td>George</td>
+					<td>Grag</td>
+					<td>george@example.com</td>
+				</tr>
+			</tbody>
+		 </table>
+	</div>
+	</div>
 </body>
 
 <footer><CENTER>телефон +380353642464</CENTER></footer>
