--- a/reviews.html
+++ b/reviews.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="app">
  	<head>
 		<script src="bootstrap-3.3.7-dist/jq/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
@@ -7,8 +7,10 @@
 		<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/style.css" rel="stylesheet" type="text/css" >
+  		<script src="js/angular.min.js"></script>
+   		<script src="js/my.js"></script>
     </head>
-<body class="container-fluid con" >
+<body class="container-fluid con" ng-controller="Ctrl">
 	<div class="header row">
 		<div class="logo col-lg-4 col-md-4 col-sm-2 col-xs-9">
 			<div class="logotext">SuperLogo</div>
@@ -19,13 +21,13 @@
 			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Студентам</a>
 				<ul class="row">
 					<li class="col-lg-12 col-md-12 col-sm-12"><a href="#">Програма</a></li>
-					<li class="col-lg-12 col-md-12 col-sm-12" ><a href="#">Лабораторна</a></li>
+					<li class="col-lg-12 col-md-12 col-sm-12" ><a href="lab.html">Лабораторна</a></li>
 					<li class="col-lg-12 col-md-12 col-sm-12"><a href="#">Література</a></li>
 					<li class="col-lg-12 col-md-12 col-sm-12"><a href="curriculum.html">Начальний план</a></li>
 				</ul>
 			</li>  
 			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="reviews.html">Відгуки</a></li>
-			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="#">Контакти</a></li>
+			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="contacts.html">Контакти</a></li>
 			<li class="grow col-lg-2 col-md-2 col-sm-2 col-xs-0"><a href="admin.html">Admin</a></li>
 		</ul>
 		<div class="minimenu hidden-lg hidden-md hidden-sm col-xs-3">
@@ -38,13 +40,13 @@
 				<li class="grow col-xs-12"><a href="#">Студентам</a>
 					<ul class="row">
 						<li class="col-xs-10 center"><a href="#">Програма</a></li>
-						<li class="col-xs-10 center"><a href="#">Лабораторна</a></li>
+						<li class="col-xs-10 center"><a href="lab.html">Лабораторна</a></li>
 						<li class="col-xs-10 center"><a href="#">Література</a></li>
 						<li class="col-xs-10 center"><a href="curriculum.html">Начальний план</a></li>
 					</ul>
 				</li>  
 				<li class="grow col-xs-12"><a href="reviews.html">Відгуки</a></li>
-				<li class="grow col-xs-12"><a href="#">Контакти</a></li>
+				<li class="grow col-xs-12"><a href="contacts.html">Контакти</a></li>
 				<li class="grow col-xs-12"><a href="admin.html">Admin</a></li>
 			</ul>
 		</div>
@@ -58,26 +60,22 @@
 	<div class="row content">
 	
 	<div class="standart col-lg-12 col-md-12 col-sm-12 col-xs-12" ><p class="p1">Відгуки</p>
-		<p>У результаті вивчення дисципліни «Застосування законодавства іноземних
-		держав в нотаріальній практиці» здобувач вищої освіти повинен:
-		знати:
-		- основні положення міжнародних актів, чинного законодавства України та
-		іноземного законодавства щодо вчинення нотаріальних дій;
-		- особливості прийняття нотаріусами України документів, складених за кордоном
-		та процесуальний порядок оформлення нотаріусами документів для дії за кордоном;
-		- особливості нотаріальних дій щодо забезпечення доказів, необхідних для
-		ведення справ в органах іноземних держав;
-		- особливості міжнародної співпраці у сфері нотаріату;
-		вміти:
-		- правильно застосовувати міжнародні акти, чинне законодавство України та
-		іноземне законодавство щодо вчинення нотаріальних дій;
-		-
-		складати проекти нотаріальних документів із застосуванням законодавства іноземних
-		держав та документів для дії за кордоном;
-		- вчиняти дії щодо забезпечення доказів, необхідних для ведення справ в органах
-		іноземних держав;
-		- аналізувати практичні ситуації в нотаріальній практиці.</p></div>
+		<div class="all_reviews">
+		<div ng-repeat="a in reviews">
+		<div class="review">
+			<span class="author">{{a.name}}</span> <span class="date">{{a.date}}</span>
+			<br>
+			<span>{{a.text}}</span>
 		</div>
+		<hr>
+		</div>
+		</div>
+		<textarea name="" id="rev" class="textarea" placeholder="Новий відгук..."></textarea>
+		<button class="btn btn-success my-btn" id="send">Відправити</button>
+		
+		</div>
+		</div>
+		
 </body>
 
 <footer><CENTER>телефон +380353642464</CENTER></footer>
